--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <h3>MY×PROJECT×GAME</h3>
+    <h3>SCORE: </h3>
     <canvas width="900" height="500" id="myCanvas"></canvas> 
     
     <p>coronadoapps©</p>    
