--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 <body>
     <h3>MY×PROJECT×GAME</h3>  
+    <h3 id="score"></h3>
     <canvas width="900" height="500" id="myCanvas"></canvas> 
     <p>coronadoapps©</p>    
     <script src='main.js'></script>
